wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers: 
      - name: wordpress
        image: wordpress:5.5.3-php7.4-apache
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/var/www/html"
          name: wordpress-pv-storage
      volumes:
      - name: wordpress-pv-storage
        persistentVolumeClaim:
         claimName: wordpress-pv-claim
