wordpress-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  selector:
    app: wordpress
  ports:
  - protocol: TCP
    port: 8030
    targetPort: 80
    name: http
