wordpress-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
  - secretName: davidgehrig-com-tls
  rules:
  - host: www.davidgehrig.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 8030
